# openems

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  PERFORMANCE_ANALYSIS.md  PRECISION_ANALYSIS.md  README.md  mkdocs.yml  openems.cpp  openems.h  pyproject.toml
.github/workflows/: ci.yml  docs.yml  rust.yml
FDTD/: CMakeLists.txt  engine_hwy.cpp  engine_hwy.h  engine_hwy_tiled.cpp  engine_hwy_tiled.h  engine_hwy_wide.cpp  engine_hwy_wide.h  operator_hwy.cpp  operator_hwy.h  operator_hwy_tiled.cpp  operator_hwy_tiled.h  operator_hwy_wide.cpp  operator_hwy_wide.h
benches/: fdtd_bench.rs  holistic_bench.rs
benchmark/: .gitignore  BENCHMARK_REPORT.md  BENCHMARK_RESULTS.md  CMakeLists.txt  PERFORMANCE_ANALYSIS.md  benchmark_sim.py  fdtd_benchmark.cpp  fdtd_benchmark_all.cpp  fdtd_benchmark_highway.cpp  fdtd_highway.cpp  fdtd_highway.h  fdtd_optimized.cpp  run_profiling.py
docs/: index.md  requirements.txt
docs/api/: constants.md  grid.md  index.md  openems.md
docs/examples/: basic_simulation.md  index.md  microstrip.md  patch_antenna.md  waveguide.md
docs/getting-started/: installation.md  quickstart.md
docs/theory/: boundaries.md  fdtd.md  meshing.md
examples/: benchmark.rs
matlab/: CalcNF2FF.m
matlab/private/: invoke_openEMS.m  searchBinary.m
python/: gpu_benchmark.py
python/openems/: __init__.py  _rust.pyi
src/arrays/: field.rs
src/extensions/: conducting_sheet.rs  cpml.rs  dispersive.rs  extension_trait.rs  mod.rs  mur_abc.rs  pml.rs  tfsf.rs
src/fdtd/: basic_engine.rs  batch.rs  cylindrical.rs  engine.rs  engine_impl.rs  engine_testing.rs  excitation.rs  gpu_engine.rs  gpu_shader_builder.rs  mod.rs  new_engine.rs  operator.rs  parallel_engine.rs  shaders.wgsl  simd_engine.rs  simulation.rs
src/python/: mod.rs
tests/: gpu_test.rs
